added code initialization of maps